# MaaFramework

docs/en_us/: 3.1-PipelineProtocol.md
docs/superpowers/plans/: 2026-05-12-pipeline-loopscan-subpipeline.md  2026-05-12-pipeline-subpipeline-recognition.md
docs/superpowers/specs/: 2026-05-12-pipeline-loopscan-subpipeline-design.md  2026-05-12-pipeline-subpipeline-recognition-design.md
docs/zh_cn/: 3.1-任务流水线协议.md
source/MaaFramework/Resource/: PipelineChecker.cpp  PipelineChecker.h  PipelineDumper.cpp  PipelineParser.cpp  PipelineParser.h  PipelineResMgr.cpp  PipelineResMgr.h  PipelineTypes.h  PipelineTypesV2.h  ResourceMgr.cpp
source/MaaFramework/Task/: Context.cpp  PipelineTask.cpp  PipelineTask.h
source/binding/NodeJS/src/apis/: pipeline.d.ts
source/binding/Python/: pyproject.toml
source/binding/Python/maa/: pipeline.py
source/binding/Python/maa/extras/: u2.py
test/python/: demo_3level_nested.py  pipeline_test.py  smoke_loopscan.py  smoke_subpipeline_reco.py
tools/: pipeline.schema.json
