[project]
name = "MaaFw"
version = "0"
requires-python = ">=3.9"
authors = [{ name = "MaaXYZ" }]
description = "An automation black-box testing framework based on image recognition"
readme = "README.md"
urls = { Homepage = "https://github.com/MaaXYZ/MaaFramework" }
dependencies = ["numpy", "strenum", "MaaAgentBinary"]

[project.optional-dependencies]
u2 = ["uiautomator2>=2.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maa"]
